src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Factory Response</fullName>
        </values>
        <values>
            <fullName>Awaiting Information from Consumer</fullName>
        </values>
        <values>
            <fullName>Awaiting Knowledge Response</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed as Duplicate</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending with Courier</fullName>
        </values>
        <values>
            <fullName>Review Needed</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <description>To store comment from the out-of-hours service for emergency action case</description>
        <label>Action Taken</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alert_Action_Id__c</fullName>
        <label>Alert Action Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Reporting__c</fullName>
        <description>CEC : This field is used to create Reports for the Brands.</description>
        <formula>IF(CEC_Product__r.Product_CU_Description_English__c == &apos;Unilever Corporate&apos;,&apos;Unilever Corporate&apos;, Case_Brand__c )</formula>
        <label>Brand Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Contact us Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breakdown_Machine__c</fullName>
        <description>TO: Breakdown Machine</description>
        <label>Breakdown Machine</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEC_Product_Hierarchy__c</fullName>
        <description>Product Hierarchy details for reporting purpose.</description>
        <label>Product Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEC_Product_Reporting_Name__c</fullName>
        <description>CEC : This field is used to create Reports for the Products with size.</description>
        <formula>If(isPacksizeKnown__c == TRUE, CEC_Product__r.Consumer_Product_Descriptor_Local_Lang__c , IF(isPacksizeKnown__c ==FALSE &amp;&amp; isVariantKnown__c ==TRUE, Consumer_Product_Descriptor_no_size__c ,IF( isVariantKnown__c == FALSE &amp;&amp; isFormKnown__c == TRUE, CEC_Product__r.Global_CPG_Code__r.Corp_Prod_Grouping_Name__c,IF(CEC_Product__r.Product_CU_Description_English__c == &apos;Unilever Corporate&apos;,&apos;Unilever Corporate&apos; ,Case_Brand__c + &apos; – &apos; +  L2_Product_Category__c))))</formula>
        <label>CEC Product Reporting Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEC_Product_Reporting_Name_no_size__c</fullName>
        <description>CEC : This field is used to create Reports with Products without size</description>
        <formula>If( isVariantKnown__c == TRUE, CEC_Product__r.Consumer_Product_Descriptor_no_size__c , If( isVariantKnown__c == FALSE &amp;&amp; isFormKnown__c == TRUE, CEC_Product__r.Global_CPG_Code__r.Corp_Prod_Grouping_Name__c,IF(CEC_Product__r.Product_CU_Description_English__c == &apos;Unilever Corporate&apos;,&apos;Unilever Corporate&apos; ,Case_Brand__c + &apos; – &apos; +  L2_Product_Category__c)))</formula>
        <label>CEC Product Reporting Name (no size)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEC_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CEC : Look up field to populate the Case Product.</description>
        <label>CEC_Product</label>
        <referenceTo>mdm_Case_Product__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CEC_Reason_Code__c</fullName>
        <formula>Reason_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEC_Reason_Hierarchy__c</fullName>
        <description>Stores the Reason Hierarchy value.</description>
        <label>Reason Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMMFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CEC: This flag will be set in the email trigger whenever new CMM is populated on the case object</description>
        <label>CMMFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMM_Account_Owner_Active_Flag__c</fullName>
        <formula>Country__r.Account_Owner_Active_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMM Account Owner Active Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPG_Code_Reporting__c</fullName>
        <description>CEC : This field is used to create reports with Corp Product Grouping Name</description>
        <formula>IF( isPacksizeKnown__c == TRUE,CEC_Product__r.GTIN_EAN_UPC_Code__c , &apos;&apos;)</formula>
        <label>CPG Code Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSAT_Delay__c</fullName>
        <formula>DATEVALUE( ClosedDate + Country__r.CSAT_Delay__c )</formula>
        <label>CSAT Delay</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSAT_Survey_Id__c</fullName>
        <formula>Country__r.CSAT_Survey_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAT Survey Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CV_Questionaire_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CEC CV Questionaire Added is a flag that specifies that advisor has added the CV Questionnaires.</description>
        <label>CV Questionaire Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CV_Status__c</fullName>
        <description>CEC CV Status is used to capture CV status</description>
        <label>CV Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed(Customer Non-cooperative)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed(Permanent Nature Symptoms)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Consumer Feedback(Attempt1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Consumer Feedback(Attempt2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Consumer Feedback(Attempt3)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Brand_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CEC: Lookup to the brand mapping table to identify template and case parameters</description>
        <label>Case Brand Mapping</label>
        <referenceTo>cec_Case_Brand_Mapping__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Brand__c</fullName>
        <description>CEC: The case brand field will pull the brand from the product field if it is populated if not it will check the cec product brand field and the case market mapping brand field, it also checks the brand field on the case.</description>
        <formula>IF(CEC_Product__c != null, 
CEC_Product__r.Brand__c 
, 
IF(Case_Brand_Mapping__r.Brand__c!= null, 
Case_Brand_Mapping__r.Brand__c 
, 
Brand__c 
) 
)</formula>
        <label>Case Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_ISO_Country_Code__c</fullName>
        <formula>Country__r.Country__r.ISO_3166_1_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case ISO Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Market_Mapping_Country_Id__c</fullName>
        <description>Case Market Mapping Country (Unilever Geography Record Id)</description>
        <formula>Country__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Market Mapping Country Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Market_Mapping_Country__c</fullName>
        <description>CEC: refers to Case Market Mapping&apos;s Country(Unilever Geography) &apos;s 	
ISO Country Dependency Medium Name</description>
        <formula>Country__r.Country__r.ISO_Country_Dependency_Medium_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Market Mapping Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Market_Tag__c</fullName>
        <description>TO : Formula field to copy the value of Tag__c field from Case Market Mapping object.</description>
        <formula>TEXT(Country__r.Tag__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Market Tag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Market__c</fullName>
        <description>CEC: refers the Case Market Mapping&apos;s  Market field</description>
        <formula>Country__r.Market__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Count__c</fullName>
        <description>CEC this formula field puts the number 1 on the record for counting advantages on reports</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_product_category__c</fullName>
        <label>Case product category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Status__c</fullName>
        <description>CEC : To hold the status of the claim.</description>
        <label>Claim Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Transferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Transferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claims_Note__c</fullName>
        <description>CEC Claims Note is used to record notes on the case that are confidential and only claims users can view so that confidential information is hidden from standard users</description>
        <label>Claims Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_Notes__c</fullName>
        <description>CEC : To store the information relevant to the Claims team confidentiality.</description>
        <label>Claims Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consumer_Email__c</fullName>
        <description>CEC: This is used in thunderhead email</description>
        <formula>Account.PersonContact.Email</formula>
        <label>Consumer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Note__c</fullName>
        <description>CEC: Displays images based on if Contact is frequent caller and/or a VIP</description>
        <formula>IF( Account.VIP__c , IMAGE(&apos;/resource/CEC_VIP_icon&apos;,&apos;VIP&apos;,20,20), NULL) &amp;&apos;  &apos;&amp;
IF( ISPICKVAL(  Account.Known_Consumer__c , &apos;Frequent&apos;), IMAGE(&apos;/resource/CEC_FrequentCustomer_icon&apos;,&apos;Frequent&apos;,20,20), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumer Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Product_Descriptor_no_size__c</fullName>
        <formula>CEC_Product__r.Consumer_Product_Descriptor_no_size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumer Product Descriptor no size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <description>CEC:To store case - case market mappping- country Name</description>
        <label>Country Name</label>
        <picklist>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Salvador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guatemala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honduras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latvia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lithuania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CEC -  Holds the Country&apos;s ID from Case Market Mapping object.</description>
        <label>Country</label>
        <referenceTo>CEC_Case_Market_Mapping__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DW_Order_Number__c</fullName>
        <description>TO: DW Order Number</description>
        <label>DW Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Manufacture__c</fullName>
        <description>cec_Date of Manufacture of the issue product</description>
        <label>Date of Manufacture</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Manufacture_str__c</fullName>
        <description>cec_Date of Manufacture of the issue product in String</description>
        <label>Date of Manufacture</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DayCode__c</fullName>
        <description>cec_the day the product is manufactured</description>
        <label>DayCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultCMMAccountOwner_Id__c</fullName>
        <formula>Country__r.DefaultAccountOwnerId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DefaultCMMAccountOwner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_From_Address__c</fullName>
        <description>CEC Override From Address filed is populated in following way.
If &apos;Override From Address&apos;(on Case) is selected then use that
else if &apos;Default Outbound Email address&apos; on Case Brand Mapping is not null then use that
else populate &apos;Default From Address&apos; from Case Market Mapping.</description>
        <formula>IF( NOT(ISBLANK(TEXT(Override_From_Address__c))) , TEXT(Override_From_Address__c),  IF(Case_Brand_Mapping__r.Outbound_Email_Address__c != null , Case_Brand_Mapping__r.Outbound_Email_Address__c,  Country__r.Default_From_Address__c ) )</formula>
        <label>Default From Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <description>CEC: Email Subject field for outbound emails</description>
        <formula>IF( Case_Brand__c !=&apos;&apos;,  Case_Brand__c + &quot; &quot;, &quot;&quot;) + $Label.CEC_Email_Subject +&quot; &quot; +  CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalated_Date__c</fullName>
        <description>CEC : To capture the date / time when a case gets escalated for the first time.</description>
        <label>Escalated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Escalated_to_Closed_Days__c</fullName>
        <description>CEC : To capture the duration in days between the last Closed Date / time and the first Escalation Date / Time of a case.</description>
        <formula>ClosedDate - Escalated_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escalated to Closed(Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalated_to_Closed_Hours__c</fullName>
        <description>CEC : To capture the duration in hours between the last Closed Date / time and the first Escalation Date / Time of a case.</description>
        <formula>(ClosedDate - Escalated_Date__c) * 24</formula>
        <label>Escalated to Closed(Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalated_to_Closed_Minutes__c</fullName>
        <description>CEC : To capture the duration in minutes between the last Closed Date / time and the first Escalation Date / Time of a case.</description>
        <formula>( ClosedDate - Escalated_Date__c )* 24 * 60</formula>
        <label>Escalated to Closed(Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExecuteCaseSurveyWorkflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CEC: this is set to true, based on conditions, via a workflow when case is closed.</description>
        <label>ExecuteCaseSurveyWorkflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>CEC: Used for Sapient integration</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Image_Address__c</fullName>
        <description>CEC: External image address taken from the Case Brand Mapping object so it can be used in email templates</description>
        <formula>Case_Brand_Mapping__r.External_Image_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Image Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_Investigation_Survey_Link__c</fullName>
        <formula>HYPERLINK(&quot;http://survey.clicktools.com/go?iv=&quot; &amp; $Setup.cec_Org_Settings__c.Factory_Investigation_Survey_ID__c &amp; &quot;&amp;q1=&quot; &amp; Id &amp; &quot;&amp;q10=&quot; &amp; $User.Id , $Label.CEC_Case_Factory_Survey_Reference)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Factory Investigation Survey Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Response_Date__c</fullName>
        <description>CEC this field is the first date we responded to an email</description>
        <label>First Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Response_Email_Time__c</fullName>
        <description>CEC This formula works out the time between case opening and first response email</description>
        <formula>(floor((First_Response_Date__c -  CreatedDate)*24))
+
(((((First_Response_Date__c -  CreatedDate)*24)-floor((First_Response_Date__c -  CreatedDate)*24))*60)/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Response Email Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Reason_L1_desc__c</fullName>
        <description>CEC: Global description of the L1 Reason Code, in English</description>
        <formula>Reason_Code__r.Global_Listening_Tree__r.L1_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Reason L1 desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Reason_L2_desc__c</fullName>
        <description>CEC: Global description of the L2 Reason Code, in English</description>
        <formula>Reason_Code__r.Global_Listening_Tree__r.L2_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Reason L2 desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Reason_L3_desc__c</fullName>
        <description>CEC: Global description of the L3 Reason Code, in English</description>
        <formula>Reason_Code__r.Global_Listening_Tree__r.L3_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Reason L3 desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HistoricCreatedDate__c</fullName>
        <description>CEC - Historic Created Date for legacy cases</description>
        <label>HistoricCreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Homecare__c</fullName>
        <description>CEC: Homecare Cosmetovigilance survey link</description>
        <formula>HYPERLINK(&quot;http://survey.clicktools.com/go?iv=&quot;
&amp; $Setup.cec_Org_Settings__c.Homecare_Questionnaire_Id__c
&amp; &quot;&amp;q1=&quot; &amp; Id
&amp; &quot;&amp;q2=&quot; &amp; CaseNumber
&amp; &quot;&amp;q3=&quot; &amp; TEXT(CreatedDate)
&amp; &quot;&amp;q4=&quot; &amp; Text(Country_Name__c)
&amp; &quot;&amp;q7=&quot; &amp; L2_Product_Category__c
&amp; &quot;&amp;q8=&quot; &amp; L7_Product_Category__c
&amp; &quot;&amp;q9=&quot; &amp; Case_Brand__c
&amp; &quot;&amp;q10=&quot; &amp; CEC_Product_Reporting_Name__c
&amp; &quot;&amp;q11=&quot; &amp; Product_UPC__c
&amp; &quot;&amp;q12=&quot; &amp; Production_Code__c
&amp; &quot;&amp;q13=&quot; &amp; TEXT(Origin)
&amp; &quot;&amp;q14=&quot; &amp; Global_Reason_L5_desc__c,
&quot;Homecare Cosmetovigilence&quot;)</formula>
        <label>Homecare</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inconsistent_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Wrong product retrieved or advisor reported incorrectly</inlineHelpText>
        <label>Inconsistent Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ingestion__c</fullName>
        <description>CEC : Ingestion CosmetoVigilance survey link</description>
        <formula>HYPERLINK(&quot;http://survey.clicktools.com/go?iv=&quot;
&amp; $Setup.cec_Org_Settings__c.Ingestion_Questionnaire_Id__c
&amp; &quot;&amp;q1=&quot; &amp; Id
&amp; &quot;&amp;q2=&quot; &amp; CaseNumber
&amp; &quot;&amp;q3=&quot; &amp; TEXT(CreatedDate)
&amp; &quot;&amp;q4=&quot; &amp; Text(Country_Name__c)
&amp; &quot;&amp;q7=&quot; &amp; L2_Product_Category__c
&amp; &quot;&amp;q8=&quot; &amp; L7_Product_Category__c
&amp; &quot;&amp;q9=&quot; &amp; Case_Brand__c
&amp; &quot;&amp;q10=&quot; &amp; CEC_Product_Reporting_Name__c
&amp; &quot;&amp;q11=&quot; &amp; Product_UPC__c
&amp; &quot;&amp;q12=&quot; &amp; Production_Code__c
&amp; &quot;&amp;q13=&quot; &amp; TEXT(Origin)
&amp; &quot;&amp;q14=&quot; &amp; Global_Reason_L5_desc__c,
&quot;Ingestion Cosmetovigilence&quot;)</formula>
        <label>Ingestion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Language_Skill_Match__c</fullName>
        <formula>IF(Language__c =&quot;&quot;, TRUE, CONTAINS($User.Language_Skills_List__c,Language__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Language Skill Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Product_Skill_Match__c</fullName>
        <formula>IF(TEXT(Product_Skill__c) =&quot;&quot;, TRUE, CONTAINS( $User.Product_Category_Skills_List__c + $User.Product_Category_Skills_List2__c, TEXT(Product_Skill__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Product Skill Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L0_Product_Category__c</fullName>
        <formula>CEC_Product__r.Global_CPG_Code__r.L0_Product_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L0 Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L0_Product_Reporting__c</fullName>
        <description>CEC : This field is used to create Reports with L0 Products.</description>
        <formula>IF(CEC_Product__r.Product_CU_Description_English__c == &apos;Unilever Corporate&apos;, &apos;&apos;, L0_Product_Category__c)</formula>
        <label>L0 Product Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L1_Product_Category__c</fullName>
        <description>Retrieves the L1 Product description from product category table</description>
        <formula>CEC_Product__r.Global_CPG_Code__r.L1_Product_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L1 Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L1_Product_Reporting__c</fullName>
        <description>CEC : This field is used to create Reports with L1 Products.</description>
        <formula>IF(CEC_Product__r.Product_CU_Description_English__c == &apos;Unilever Corporate&apos;, &apos;&apos;, L1_Product_Category__c)</formula>
        <label>L1 Product Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2_Product_Category__c</fullName>
        <description>Retrieves the L2 Product description from product category table</description>
        <formula>CEC_Product__r.Global_CPG_Code__r.L2_Product_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L2 Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2_Product_Reporting__c</fullName>
        <description>CEC : This field is used to create Reports with L2 Products.</description>
        <formula>IF(CEC_Product__r.Product_CU_Description_English__c == &apos;Unilever Corporate&apos;, &apos;&apos;, L2_Product_Category__c)</formula>
        <label>L2 Product Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L5_Code__c</fullName>
        <formula>Reason_Code__r.Global_Listening_Tree__r.L5_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L5 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>CEC: contains the Language Name from Case Market Mapping object</description>
        <formula>TEXT(Country__r.Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Reference__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_ID__c</fullName>
        <description>TO: Machine ID</description>
        <label>Machine Serial Number</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Override_Reason__c</fullName>
        <description>CEC : Manual Override Reason is Case Reason to change status of the Case</description>
        <label>Manual Override Reason</label>
        <picklist>
            <picklistValues>
                <fullName>1-Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manual_Retention_Override__c</fullName>
        <description>CEC-Manual Retention date</description>
        <label>Manual Retention Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nordic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benelux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Matching_Response__c</fullName>
        <label>Matching Response</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewAccountFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CEC: This field will be updated whenever new account is created as part of email-to-case</description>
        <label>NewAccountFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Description__c</fullName>
        <label>Original Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Out_of_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifying if an emergency action was taken during out-of-hours</description>
        <label>Out of Hours</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>